# rustedFedora

./: .gitignore  README.md
imessage-cli/: Cargo.toml
imessage-cli/firedbg/src/: main.rs.firedbg.map
imessage-cli/scripts/: Untitled.scpt  m_test.scpt  message_test.scpt  recent_test.scpt  send_text.scpt  view_messages.scpt  view_recent.scpt
imessage-cli/src/: imess and sms.scpt  main.rs  send_text.scpt
office-cli/: Cargo.toml
